# quiver

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
docs/: SPEC.md  spec.md
examples/: sum.qv
quiver-cli/: Cargo.toml
quiver-cli/src/: diagnostics.rs  lib.rs  main.rs  native_transport.rs  repl.rs  repl_cli.rs  runtime.rs
quiver-cli/tests/: format.rs  repl.rs
quiver-compiler/: Cargo.toml
quiver-compiler/src/: ast.rs  compiler.rs  format.rs  lib.rs  manifest.rs  modules.rs  parser.rs  pretty.rs  recorder.rs  resolver.rs  simplify.rs
quiver-compiler/src/compiler/: codegen.rs  helpers.rs  merge.rs  modules.rs  narrowing.rs  pattern.rs  provenance.rs  scopes.rs  spread.rs  type_queries.rs  typing.rs  variables.rs
quiver-core/: Cargo.toml
quiver-core/src/: binary.rs  bytecode.rs  compatibility.rs  effects.rs  error.rs  execute.rs  execute_sync.rs  executor.rs  format.rs  lib.rs  optimisation.rs  process.rs  program.rs  types.rs  value.rs
quiver-core/src/builtins/: binary.rs  integer.rs  io.rs  math.rs  mod.rs  reference.rs  vector.rs
quiver-core/src/program/: optimisation.rs
quiver-environment/: Cargo.toml
quiver-environment/src/: environment.rs  lib.rs  messages.rs  repl.rs  runtime.rs  transport.rs  worker.rs
quiver-environment/tests/: integration_test.rs
quiver-io/: Cargo.toml
quiver-io/src/: effects.rs  file.rs  lib.rs  native_backend.rs  network.rs  util.rs
quiver-lsp/: Cargo.toml
quiver-lsp/src/: analysis.rs  backend.rs  convert.rs  diagnostics.rs  documents.rs  effect.rs  loader.rs  main.rs  symbols.rs
quiver-tests/: Cargo.toml
quiver-tests/tests/: access.rs  arithmetic.rs  assignment.rs  await.rs  bignum.rs  binaries.rs  binary.rs  bitwise.rs  blocks.rs  branches.rs  builtins.rs  call_syntax.rs  chaining.rs  comments.rs  common.rs  comparison.rs  dict.rs  dispatch.rs  equality.rs  exhaustiveness.rs  files.rs  flow_fields.rs  functions.rs  generics.rs  imports.rs  inferred_function_params.rs  integer.rs  integers.rs  iter.rs  list.rs  literals.rs  matching.rs  math.rs  narrowing.rs  nil_match.rs  not.rs  num.rs  path.rs  processes.rs  range.rs  (+12 more)
quiver-web/: Cargo.toml  build.sh
quiver-web/src/: effects.rs  lib.rs  pump.rs  repl.rs  repl_web.rs  runtime.rs  types.rs  web_transport.rs  worker_entry.rs  worker_executor.rs
src/: ast.rs  bytecode.rs  compiler.rs  format.rs  grammar.pest  lib.rs  main.rs  modules.rs  parser.rs  program.rs  repl.rs  scheduler.rs  types.rs  vm.rs
src/builtins/: binary.rs  io.rs  math.rs  mod.rs
src/bytecode/: optimisation.rs
src/compiler/: codegen.rs  expression.rs  free_variables.rs  merge.rs  mod.rs  modules.rs  pattern.rs  type_system.rs  typing.rs  variables.rs
src/program/: optimisation.rs
std/: bin.qv  binary.qv  dict.qv  dns.qv  file.qv  fs.qv  int.qv  integer.qv  io.qv  iter.qv  list.qv  math.qv  num.qv  path.qv  range.qv  ref.qv  str.qv  string.qv  vec.qv
tests/: access.rs  arithmetic.rs  assignment.rs  await.rs  binaries.rs  binary_bitwise.rs  bitwise.rs  blocks.rs  branches.rs  builtins.rs  chaining.rs  comments.rs  common.rs  comparison.rs  control_flow.rs  edge_cases.rs  equality.rs  functions.rs  imports.rs  list.rs  literals.rs  member_access.rs  merge.rs  not.rs  operators.rs  patterns.rs  processes.rs  receive.rs  repl.rs  sequences.rs  stdlib.rs  strings.rs  tail_calls.rs  tuples.rs  types.rs
tests/common/: mod.rs
tree-sitter/: .gitattributes  .gitignore  Cargo.toml  grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter/bindings/rust/: build.rs  lib.rs
tree-sitter/queries/: highlights.scm  indents.scm
tree-sitter/scripts/: check-corpus.sh
tree-sitter/src/: grammar.json  node-types.json  parser.c
tree-sitter/test/corpus/: expressions.txt  functions.txt  patterns.txt  processes.txt  types.txt
