[package]
name = "quiver"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "quiv"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.46", features = ["derive"] }
colored = "2.2.0"
hex = "0.4.3"
nom = "7.1"
rustyline = "17.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
