[workspace]
members = ["quiver-core", "quiver-compiler", "quiver-environment", "quiver-io", "quiver-cli", "quiver-web", "quiver-tests", "quiver-lsp"]
# The tree-sitter grammar lives in its own (Node/C) toolchain and is not a Cargo crate.
exclude = ["tree-sitter"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.143"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
