[package]
name = "quiver-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quiv"
path = "src/main.rs"

[dependencies]
quiver-core = { path = "../quiver-core" }
quiver-compiler = { path = "../quiver-compiler" }
quiver-environment = { path = "../quiver-environment" }
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
colored = "2.1"
ariadne = "0.4"
serde_json.workspace = true
