[package]
name = "quiver-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
quiver-core = { path = "../quiver-core" }
nom = "7.1"
nom_locate = "4.2"
serde.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
num-integer.workspace = true
hex = "0.4.3"
toml = "0.8"
include_dir = "0.7"
