[package]
name = "quiver-web"
version.workspace = true
edition.workspace = true
description = "WebAssembly bindings for the Quiver language"
repository = "https://github.com/joefreeman/quiver"
license = "MIT"
keywords = ["wasm", "quiver", "language"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quiver-core = { path = "../quiver-core" }
quiver-compiler = { path = "../quiver-compiler" }
quiver-environment = { path = "../quiver-environment" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "DedicatedWorkerGlobalScope",
    "console",
]
