[package]
name = "quiver-web"
version.workspace = true
edition.workspace = true
description = "WebAssembly bindings for the Quiver language"
repository = "https://github.com/joefreeman/quiver"
license = "MIT"
keywords = ["wasm", "quiver", "language"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quiver-core = { path = "../quiver-core" }
quiver-compiler = { path = "../quiver-compiler" }
quiver-environment = { path = "../quiver-environment" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
tsify = "0.4"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "DedicatedWorkerGlobalScope",
    "console",
]
