[package]
name = "tree-sitter-quiver"
description = "Quiver grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = ["Joe Freeman <joe@joef.uk>"]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "quiver"]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tree-sitter = "0.25"
